# CmakeLearn

./: .gitignore  README.md
chapter1-build_exe_lib/: build-exe-lib.md
chapter1-build_exe_lib/cmake-ifelse/: CMakeLists.txt  build.sh  message.h
chapter1-build_exe_lib/first-cmake/: hello-cmake.cpp
chapter1-build_exe_lib/static-shared/: CMakeLists.txt  hello-cmake.cpp
chapter10-install/: cmake-install.md
chapter10-install/cmake-export-target/: CMakeLists.txt  build.sh
chapter10-install/cmake-export-target/build_install/share/cmake/recipe-03/: messageConfig.cmake  messageTargets.cmake
chapter10-install/cmake-export-target/cmake/: messageConfig.cmake.in
chapter10-install/cmake-export-target/src/: CMakeLists.txt  hello-world.cpp
chapter10-install/cmake-export-target/tests/: CMakeLists.txt
chapter10-install/cmake-export-target/tests/use_target/: CMakeLists.txt
chapter10-install/cmake-install/: CMakeLists.txt  build.sh
chapter10-install/cmake-install-super/: CMakeCPack.cmake  CMakeLists.txt  CMakeLists.txt.bkk  build.sh
chapter10-install/cmake-install-super/build_install/include/message/: messageExport.h
chapter10-install/cmake-install-super/build_install/share/cmake/message/: messageConfig.cmake  messageTargets-release.cmake
chapter10-install/cmake-install-super/src/: CMakeLists.txt.bk
chapter10-install/cmake-install/build_install/lib/: libmessage.so.1
chapter10-install/cmake-install/src/: CMakeLists.txt
chapter11-package/: cmake-package.md
chapter11-package/cmake-cpkg-src-bin/: CMakeCPack.cmake  CMakeLists.txt  build.sh
chapter11-package/cmake-cpkg-src-bin/cmake/: messageConfig.cmake.in
chapter11-package/cmake-cpkg-src-bin/src/: CMakeLists.txt
chapter12-document/: cmake-doc.md
chapter12-document/cmake-doc-doxygen/: CMakeLists.txt  build.sh
chapter12-document/cmake-doc-doxygen/cmake/: UseDoxygenDoc.cmake
chapter13-generater-cross-build/: cmake-generator-cross-build.md
chapter13-generater-cross-build/cmake-cross-winto-linux/: CMakeLists.txt  build.sh  example.cpp  toolchain.cmake
chapter13-generater-cross-build/cmake-vs/: CMakeLists.txt  hello-world.cpp
chapter14-test-board/: cmake-test-board.md
chapter14-test-board/cmake-ctest-cdash-asan/: CMakeLists.txt  CTestConfig.cmake  build.sh
chapter14-test-board/cmake-ctest-cdash-asan/src/: CMakeLists.txt
chapter14-test-board/cmake-ctest-cdash-asan/tests/: CMakeLists.txt
chapter14-test-board/cmake-ctest-cdash-cover/: CMakeLists.txt
chapter14-test-board/cmake-ctest-cdash-cover/src/: CMakeLists.txt  sum_integers.hpp
chapter14-test-board/cmake-ctest-cdash-tsan/: CMakeLists.txt  build.sh  dashboard.cmake
chapter14-test-board/cmake-test-cdash-cover/: CTestConfig.cmake  build.sh
chapter14-test-board/cmake-test-dash-asan/: dashboard.cmake
chapter15-cmake-rebuild/: cmake-rebuild-question.md  cmake-rebuild.md
chapter15-cmake-rebuild/vim-cmake-rebuild/: CMakeLists.txt  build.sh
chapter15-cmake-rebuild/vim-cmake-rebuild/src/: CMakeLists.txt  autogenerate.cmake  config.h.cmake.in  osdef.sh  pathdef.c.in
chapter15-cmake-rebuild/vim-cmake-rebuild/src/libvterm/: CMakeLists.txt
chapter15-cmake-rebuild/vim-cmake-rebuild/src/testdir/: CMakeLists.txt  test.cmake
chapter2-diff_platform/: diff-platform.md
chapter2-diff_platform/cmake-diff/: CMakeLists.txt
chapter2-diff_platform/cmake-diff-arch/: CMakeLists.txt
chapter2-diff_platform/cmake-sys-processor-cmd/: CMakeLists.txt
chapter3-find_pkg/cmake-find-libblas-libpapack/: CMakeLists.txt
chapter3-find_pkg/cmake-find_package/: CMakeLists.txt
chapter3-find_pkg/cmake-my-find-package/: CMakeLists.txt  FindZeroMQ.cmake
chapter3-find_pkg/cmake-pkg/: CMakeLists.txt
chapter3-find_pkg/cmake-vector-find_package/: CMakeLists.txt
chapter4-test/cmake-test-catch2/: CMakeLists.txt  CMakeLists.txt.bk  build.sh  test-catch.cpp  test.cpp
chapter4-test/cmake-test-cost/: CMakeLists.txt
chapter4-test/cmake-test-google/: CMakeLists.txt
chapter4-test/cmake-test-smp/: CMakeLists.txt  build.sh  run.sh
chapter4-test/cmake-test-timeout/: CMakeLists.txt
chapter5-config_build_command/: config-build-command.md
chapter5-config_build_command/cmake-check-run/: CMakeLists.txt
chapter5-config_build_command/cmake-compile-check/: CMakeLists.txt
chapter5-config_build_command/cmake-custom-command/: CMakeLists.txt
chapter5-config_build_command/cmake-custom-command2/: CMakeLists.txt
chapter5-config_build_command/cmake-custom-target/: CMakeLists.txt
chapter5-config_build_command/cmake-custom-target2/: CMakeLists.txt  build.sh  test.cpp
chapter5-config_build_command/cmake-execute-process/: CMakeLists.txt
chapter5-config_build_command/cmake-try-check/: CMakeLists.txt
chapter6-generate_source/cmake-exe-gitcode/: CMakeLists.txt
chapter6-generate_source/cmake-exe-gitcode_build/: CMakeLists.txt
chapter6-generate_source/cmake-exe-version/: CMakeLists.txt  CMakeLists.txt.bk  example.cpp  version.h.in
chapter6-generate_source/configure-file/: CMakeLists.txt
chapter7-project-build/: project-build.md
chapter7-project-build/cmake-maro-function/: CMakeLists.txt
chapter7-project-build/cmake-module-color/: CMakeLists.txt
chapter7-project-build/cmake-module-deprecation/: CMakeLists.txt
chapter7-project-build/cmake-module-flag-check/: CMakeLists.txt  set_compiler_flag.cmake
chapter8-super_build/: super_build.md
chapter9-lang-mix/: cmake-lang-mix.md
cmake-diff-arch/: CMakeLists.txt
cmake-find-boost/: CMakeLists.txt
cmake-find-openMP/: CMakeLists.txt
cmake-find-package-depend/: CMakeLists.txt
cmake-find-package-lib/: CMakeLists.txt
cmake-for-properties/cxx-example/: CMakeLists.txt  (+1 more)
cmake-lan-std/: CMakeLists.txt
cmake-sys-check/: CMakeLists.txt
cmake-test-catch2/: CMakeLists.txt  CMakeLists.txt.bk  test-catch.cpp  test.cpp
cmake-test-google/: .build.sh.swp  CMakeLists.txt.bk  build.sh  menu.yml  sum_integers.hpp  test.cpp
cmake-test-smp/: CMakeLists.txt.bk  main.cpp  menu.yml  sum_integers.cpp  test.cpp  test.py  test.sh
cmake3.5-pkg/: CMakeLists.txt
first-cmake/: CMakeLists.txt
static-shared/: message.cpp
(+50 files in other folders)
